--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="node_modules/chart.js/dist/Chart.bundle.min.js"></script>
-	<title>Document</title>
+	<script src="Chart.bundle.min.js"></script>
+	<title>Pepsico CDNA Sameple Chart</title>
 	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<style>
