cleaned out files

--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
 		 */
 
 		const colors = {
-			shh: '#E59FB3', // Segment households - purple
-			thh: '#BADBDD', // Total households - bluegreen
+			shh: '#D2B1D2', // Segment households - purple
+			thh: '#C1DDBA', // Total households - bluegreen
 			idx: '#264653', // Index
 			ref: '#1E8CF4', // Reference line for index
 			// Doughnut chart colors (up to 15)
